# bad_link_detector

./: final_result.json  links.json  main.py  output.xlsx  pyproject.toml  ~$output.xlsx
